# adventofcode2022

./: README.md  pyproject.toml
adventofcode2022/day1/: __init__.py
adventofcode2022/day2/: __init__.py
adventofcode2022/day3/: __init__.py
adventofcode2022/day4/: __init__.py
adventofcode2022/day5/: __init__.py
adventofcode2022/day6/: __init__.py
tests/: test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py
